# episodes_renamer

./: .gitignore  README.md  app_icon.icns  episode_renamer_app.py  episode_renamer_llm.py  pyproject.toml  setup.py
scripts/: build.sh
src/episode_renamer/: __init__.py  app.py  app_llm.py
